# fxGifAnimado

./: .gitignore  CMakeLists.txt  FileScript.cpp  FileScript.hpp  Files.hpp  GifAnimado.cpp  GifAnimado.hpp  Log.hpp  MainWindow.cpp  MainWindow.hpp  PreBuild.sh  Shell.hpp
Resources/: .gitignore  MakeResources.sh
Scripts/: Scripts.hpp  gifanimado.sh
